// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages cap inner component renders normally when caps are present 1`] = `
<Fragment>
  <h4
    className="govuk-heading-m govuk-!-padding-bottom-4"
  >
    cappy cap
  </h4>
  <p
    className="govuk-body-s govuk-!-margin-bottom-2"
  >
    <span
      className="govuk-!-font-weight-bold"
    >
      Price:
    </span>
     
    2
  </p>
  <p
    className="govuk-body-s govuk-!-margin-bottom-2"
  >
    <span
      className="govuk-!-font-weight-bold"
    >
      Duration:
    </span>
     
    1
     
    month
  </p>
  <p
    className="govuk-body-s govuk-!-margin-bottom-2"
  >
    <span
      className="govuk-!-font-weight-bold"
    >
      Expiry:
    </span>
     
    End of calendar day
  </p>
</Fragment>
`;

exports[`pages view caps should render correctly on no cap expiry 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add a cap
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap expiry validity is fareDayEnd 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <div
          className="card-row"
        >
          <CapCard
            cap={
              Object {
                "capDetails": Object {
                  "capExpiry": Object {
                    "productEndTime": "",
                    "productValidity": "endOfCalendarDay",
                  },
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            fareDayEnd="2323"
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add a cap
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity and cap with duration less than 24 hour is  present 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <div
          className="card-row"
        >
          <CapCard
            cap={
              Object {
                "capDetails": Object {
                  "capExpiry": Object {
                    "productEndTime": "",
                    "productValidity": "endOfCalendarDay",
                  },
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            fareDayEnd="2323"
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add a cap
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity and cap with more than one day duration is present 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <div
          className="card-row"
        >
          <CapCard
            cap={
              Object {
                "capDetails": Object {
                  "capExpiry": Object {
                    "productEndTime": "2323",
                    "productValidity": "fareDayEnd",
                  },
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            fareDayEnd="2323"
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add a cap
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity is fare day end 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add a cap
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;
